Fixing z-index noted in #10.

--- a/app/assets/stylesheets/formadmin/layouts/_main.scss
+++ b/app/assets/stylesheets/formadmin/layouts/_main.scss
@@ -19,7 +19,9 @@
   #sidebar {
     float: left;
     margin-left: -270px;
+    position: relative;
     width: 270px;
+    z-index: 1;
 
     .panel_contents {
       padding: 0;
